Trying to fix white space on all pages not the front page

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2673,6 +2673,12 @@ body.front main .aurora-section-third {
   }
 }
 
+body.page-node .aurora-sample-layout:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 body.page-node main .aurora-section-first {
   height: 180px;
   margin-top: -1.5em;
@@ -2699,8 +2705,8 @@ body.page-node main .aurora-section-first {
     margin-right: 1.04167%;
     height: 360px;
     margin-top: inherit;
-    width: inherit;
     float: left;
+    width: 100%;
   }
 }
 
