--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -77,7 +77,7 @@ body.front main .aurora-section-third {
 // body.page-node
 
 body.page-node .aurora-sample-layout {
-  // @include clearfix;
+  @include clearfix;
 }
 
 body.page-node main .aurora-section-first {
@@ -95,8 +95,8 @@ body.page-node main .aurora-section-first {
     @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
     margin-top: inherit;
-    width:inherit;
     float:left;
+    width:100%;
   }
 }
 
